[package]
name = "oxirs-star"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "RDF-star and SPARQL-star grammar support for quoted triples"
keywords = ["rdf-star", "sparql-star", "quoted-triples", "rdf", "semantic-web"]
categories = ["data-structures", "parser-implementations", "database"]
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
oxirs-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"

# SciRS2 dependencies for high-performance RDF-star processing (SCIRS2 POLICY)
scirs2-core = { workspace = true, features = ["simd", "parallel", "memory_efficient", "profiling", "benchmarking", "random", "jit"] }
scirs2-graph.workspace = true  # For RDF graph algorithms
scirs2-stats.workspace = true   # For statistical analysis
scirs2-metrics.workspace = true # For performance metrics

# CLI and tooling dependencies
clap = { version = "4.4", features = ["derive"] }
num_cpus = "1.17"
chrono = { version = "0.4", features = ["serde"] }
lru = "0.16"
rayon.workspace = true  # For parallel operations
oxicode.workspace = true  # For efficient serialization (replaces bincode per COOLJAPAN Policy)

# Compression dependencies
flate2.workspace = true
zstd.workspace = true
lz4_flex.workspace = true

# Async runtime for production features
tokio = { version = "1.47", features = ["sync"] }

# Cryptographic dependencies for provenance signatures
ed25519-dalek = { version = "2.1", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
# Note: rand not needed directly - use scirs2_core::random (SCIRS2 POLICY)

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "enhanced_benchmarks"
harness = false

[[bench]]
name = "adaptive_benchmarks"
harness = false

[[bench]]
name = "refactoring_benchmarks"
harness = false

[[bench]]
name = "rdf_star_advanced_benchmarks"
harness = false

[[bench]]
name = "embedding_benchmarks"
harness = false

[features]
default = []

