[package]
name = "oxirs-star"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "RDF-star and SPARQL-star grammar support for quoted triples"
keywords = ["rdf-star", "sparql-star", "quoted-triples", "rdf", "semantic-web"]
categories = ["data-structures", "parser-implementations", "database"]
readme = "README.md"
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
oxirs-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# SciRS2 dependencies for high-performance RDF-star processing (SCIRS2 POLICY)
scirs2-core = { workspace = true, features = ["simd", "parallel", "memory_efficient", "profiling", "benchmarking", "random", "jit"] }
scirs2-graph.workspace = true  # For RDF graph algorithms
scirs2-stats.workspace = true   # For statistical analysis
scirs2-metrics.workspace = true # For performance metrics

# CLI and tooling dependencies
clap = { workspace = true, features = ["derive"] }
num_cpus.workspace = true
chrono = { workspace = true, features = ["serde"] }
lru.workspace = true
rayon.workspace = true  # For parallel operations
oxicode.workspace = true  # For efficient serialization (replaces bincode per COOLJAPAN Policy)

# Compression dependencies
flate2.workspace = true
oxiarc-zstd.workspace = true
oxiarc-lz4.workspace = true

# Async runtime for production features
tokio = { workspace = true, features = ["sync"] }

# Cryptographic dependencies for provenance signatures
ed25519-dalek = { workspace = true, features = ["serde"] }
sha2.workspace = true
hex.workspace = true
base64.workspace = true
# Note: rand not needed directly - use scirs2_core::random (SCIRS2 POLICY)

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "enhanced_benchmarks"
harness = false

[[bench]]
name = "adaptive_benchmarks"
harness = false

[[bench]]
name = "refactoring_benchmarks"
harness = false

[[bench]]
name = "rdf_star_advanced_benchmarks"
harness = false

[[bench]]
name = "embedding_benchmarks"
harness = false

[features]
default = []

