[package]
name = "oxirs-vec"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Vector index abstractions for semantic similarity and AI-augmented querying"
keywords = ["vector-search", "embeddings", "similarity", "hnsw", "rdf"]
categories = ["algorithms", "data-structures", "science"]
readme = "README.md"
rust-version.workspace = true

[package.metadata.docs.rs]
# Exclude CUDA features from docs.rs builds (CUDA not available in build environment)
# NOTE: Do NOT include "cuda" or "gpu-full" features as they require CUDA toolkit
features = ["simd", "parallel", "gpu", "blas", "candle-gpu", "images", "content-processing", "python", "huggingface"]
# Do not use all-features to avoid enabling CUDA
all-features = false

[dependencies]
scirs2-core = { workspace = true }
scirs2-linalg = { workspace = true }
oxirs-core = { workspace = true, features = ["simd", "parallel"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
oxiarc-zstd = { workspace = true }
# rand functionality now provided by scirs2-core (use scirs2_core::random)
# rand_distr functionality now provided by scirs2-core (use scirs2_core::random::distributions)
half = "2.7"
memmap2.workspace = true
parking_lot.workspace = true
blake3.workspace = true
lru.workspace = true
crossbeam-utils.workspace = true
libc.workspace = true
nalgebra.workspace = true
petgraph.workspace = true
reqwest = { workspace = true }
tokio = { workspace = true, features = ["rt", "time"] }
oxicode.workspace = true  # Replaces bincode per COOLJAPAN Policy
regex.workspace = true
pdf-extract = { version = "0.10", optional = true }
oxiarc-archive = { workspace = true, optional = true }
quick-xml = { workspace = true, optional = true }
base64.workspace = true
image = { workspace = true, optional = true }
chrono.workspace = true
# CUDA dependencies (optional - for GPU acceleration)
# These are only pulled in when "cuda" feature is enabled
# Code falls back to CPU implementations when CUDA toolkit is not available
cuda-runtime-sys = { version = "0.3.0-alpha.1", optional = true }
cudarc = { version = "0.19", features = ["cuda-12000"], optional = true }
candle-core = { version = "0.9", optional = true }
# Python bindings
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }
numpy = { version = "0.28", optional = true }
uuid.workspace = true
num_cpus.workspace = true
humantime = "2.3"
indicatif.workspace = true
# HuggingFace integration
tokenizers = { version = "0.22", optional = true }
hf-hub = { version = "0.5", optional = true }
# Tantivy full-text search (upgraded to 0.25 for lru security fix)
tantivy = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
uuid.workspace = true

[features]
default = []
simd = ["oxirs-core/simd"]
parallel = ["oxirs-core/parallel"]
gpu = ["oxirs-core/gpu"]
blas = ["oxirs-core/blas"]
# CUDA feature for GPU acceleration (OPTIONAL - follows Pure Rust Policy)
# When enabled without CUDA toolkit: falls back to CPU implementations
# When enabled with CUDA toolkit: enables GPU-accelerated operations
# Default features are 100% Pure Rust (no CUDA required)
cuda = ["dep:cuda-runtime-sys", "dep:cudarc"]
candle-gpu = ["candle-core"]
gpu-full = ["cuda", "candle-gpu", "gpu"]
images = ["image"]
content-processing = ["pdf-extract", "oxiarc-archive", "quick-xml", "images"]
python = ["pyo3", "numpy"]
huggingface = ["tokenizers", "hf-hub"]
# Tantivy full-text search (Pure Rust, optional)
tantivy-search = ["tantivy"]


[[bench]]
name = "vector_bench"
harness = false
