[package]
name = "oxirs-did"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "W3C DID and Verifiable Credentials implementation with Signed RDF Graphs for OxiRS"
keywords = ["did", "vc", "w3c", "rdf", "cryptography"]
categories = ["cryptography", "authentication", "web-programming"]
readme = "README.md"
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# Internal OxiRS crates
oxirs-core.workspace = true

# SciRS2 for cryptographic operations
scirs2-core.workspace = true

# Cryptography
ed25519-dalek.workspace = true
curve25519-dalek = { workspace = true, optional = true }
sha2 = "0.10"
sha3.workspace = true
digest = "0.10"
hmac = "0.12"
base64.workspace = true
hex.workspace = true
k256.workspace = true
p256.workspace = true
bls12_381_plus.workspace = true
# rsa provides the pure-Rust RS256 (RSASSA-PKCS1-v1_5) signing and verification
# path (replaces the former `ring` dependency). Key generation lives behind the
# `keygen` feature, but the crate itself is always required for sign/verify.
rsa.workspace = true

# Multiformat encoding
multibase.workspace = true
bs58.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# HTTP client (for did:web resolution)
reqwest = { workspace = true, optional = true }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
lru.workspace = true
url.workspace = true
once_cell.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile.workspace = true

[features]
default = ["did-key", "vc-data-model-2", "did-ethr", "did-ion", "bbs-plus", "zkp"]
# fips: marker feature for FIPS 140-2 validated cryptographic operations.
# NOT included in default — must be explicitly enabled.
# When this flag is set, application code in the FIPS boundary (DID key
# generation, signature verification, VC signing) must only invoke primitives
# that are FIPS 140-2 validated (AES-GCM, ECDSA P-256/P-384, RSA, HMAC-SHA-2,
# SHA-2). See docs/policies/fips-boundary.md (RFC-003).
fips = []
# keygen: enables RSA key-pair generation. Signing/verification use the `rsa`
# crate unconditionally; this flag only gates the (slow) keygen helpers.
keygen = []
did-key = []
did-web = ["reqwest"]
did-ebsi = ["reqwest"]
did-ethr = []
did-ion = []
vc-data-model-2 = []
signed-graphs = []
key-management = []
bbs-plus = []
zkp = []
# zkp-ristretto: harden Pedersen commitments with curve25519-dalek Ristretto255
zkp-ristretto = ["dep:curve25519-dalek"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
