[package]
name = "oxirs-fuseki"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SPARQL 1.1/1.2 HTTP protocol server with Fuseki-compatible configuration"
keywords = ["sparql", "http-server", "fuseki", "rdf-server", "semantic-web"]
categories = ["web-programming", "database", "network-programming"]
readme = "README.md"
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# Core dependencies
scirs2-core = { workspace = true }
oxirs-core.workspace = true
oxirs-arq.workspace = true
oxirs-shacl.workspace = true

# HTTP server framework
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
hyper = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["ws", "multipart"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tower = { workspace = true, features = ["timeout", "load-shed", "buffer"] }
tower-http = { workspace = true, features = ["cors", "trace", "timeout", "compression-gzip", "compression-br", "request-id", "sensitive-headers"] }

# TLS/SSL support
rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
axum-server = { version = "0.8", features = ["tls-rustls"], optional = true }

# CLI and configuration
clap = { workspace = true, features = ["derive", "env"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
serde_urlencoded = "0.7"
toml.workspace = true
config.workspace = true
figment = { version = "0.10", features = ["toml", "yaml", "env"] }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Hashing
md5.workspace = true

# Logging and tracing
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "chrono"] }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, features = ["trace"] }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["trace"] }

# Authentication and security
uuid.workspace = true
argon2.workspace = true
jsonwebtoken = { workspace = true, optional = true }
bcrypt = { version = "0.19", optional = true }
sha2.workspace = true
base64.workspace = true

# Time and dates
chrono.workspace = true

# HTTP utilities
headers = "0.4"
mime = "0.3"
http-body-util.workspace = true

# Metrics and monitoring
prometheus = { workspace = true, optional = true }
axum-prometheus = { version = "0.10", optional = true }
metrics.workspace = true
metrics-exporter-prometheus = "0.18"

# Caching
lru.workspace = true
moka.workspace = true
tantivy = { workspace = true }

# Rate limiting and concurrent data structures
governor.workspace = true
dashmap.workspace = true
parking_lot.workspace = true

# Streaming
rdkafka = { workspace = true, optional = true }
async-nats = { workspace = true, optional = true }
bytes = { workspace = true }
brotli.workspace = true
num_cpus.workspace = true

# Validation
validator = { version = "0.20", features = ["derive"] }

# Random number generation
# rand functionality now provided by scirs2-core (use scirs2_core::random)

# Regular expressions for query validation
regex.workspace = true

# Serialization and encoding
oxicode.workspace = true  # Replaces bincode per COOLJAPAN Policy
hex.workspace = true

# Additional dependencies for MFA and authentication
urlencoding.workspace = true
base32 = "0.5"
qrcode = "0.14"
hmac.workspace = true
sha1.workspace = true
flate2.workspace = true

# OAuth2 and HTTP client
reqwest = { workspace = true }
percent-encoding = "2.3"
url.workspace = true

# HTTP date handling for static assets
httpdate = "1.0"

# SAML security (optional)
# xmlsec has compatibility issues with newer OpenSSL - disabled for now
# samael = { version = "0.0.19", optional = true, default-features = false }

# LDAP authentication
ldap3 = { version = "0.12", optional = true }

# System utilities
libc.workspace = true
sysinfo.workspace = true  # System monitoring

# Kubernetes operator support (optional)
kube = { workspace = true, default-features = false, features = ["rustls-tls"], optional = true }
k8s-openapi = { workspace = true, optional = true }
schemars = { version = "1.2", optional = true }

# Async utilities
futures.workspace = true
futures-util.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true

# GraphQL
async-graphql.workspace = true
async-graphql-axum = "7.2"

# OpenAPI
utoipa = { version = "5.4", features = ["chrono"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum", "vendored"] }

# DNS resolution for service discovery (migrated from trust-dns to hickory-dns)
hickory-resolver = "0.25"

# X.509 certificate parsing for client authentication
x509-parser = "0.18"
der-parser = "10.0"
ring.workspace = true

# ACME/Let's Encrypt certificate automation (optional)
instant-acme = { version = "0.8", optional = true }

# Certificate generation for self-signed certs (optional)
rcgen = { workspace = true, optional = true }

# File watching for hot reload
notify = { version = "8.2", optional = true }

# Template engine for admin UI
askama = { version = "0.15", optional = true }

# Environment
dotenv = "0.15"

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
tokio-test.workspace = true
axum-test = "19"
http = { workspace = true }
http-body-util.workspace = true
tower = { version = "0.5", features = ["util"] }
tempfile.workspace = true
rstest = "0.26"
insta = "1.46"
serial_test.workspace = true
proptest.workspace = true
wiremock.workspace = true

[features]
default = ["metrics", "auth"]
metrics = ["prometheus", "axum-prometheus"]
auth = ["jsonwebtoken", "bcrypt"]
admin-ui = ["askama"]
tracing = ["tracing-opentelemetry"]
rate-limit = []
tls = ["rustls", "tokio-rustls", "rustls-pemfile", "axum-server"]
kafka = ["rdkafka"]
nats = ["async-nats"]
hot-reload = ["notify"]
ldap = ["ldap3"]
saml = []  # SAML authentication support (implementation in progress)
# saml = [] # Disabled until xmlsec compatibility issues are resolved
development = ["admin-ui", "tracing"]
production = ["metrics", "auth", "rate-limit", "tls", "ldap"]
k8s = ["kube", "k8s-openapi", "schemars"]  # Kubernetes operator support
acme = ["instant-acme", "rcgen"]  # ACME/Let's Encrypt certificate automation
memory_management = []  # SciRS2-Core advanced memory leak detection

[package.metadata.docs.rs]
# Exclude features requiring system libraries not available on docs.rs
features = ["metrics", "auth", "admin-ui", "tracing", "rate-limit", "tls", "hot-reload", "acme"]
# Exclude: kafka (rdkafka), nats (async-nats has build issues), ldap, k8s (kube/k8s-openapi)
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "oxirs-fuseki"
path = "src/main.rs"

